--- a/apps/resume-web/package.json
+++ b/apps/resume-web/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@resume/hooks": "workspace:*",
+    "@resume/icons": "workspace:*",
+    "@resume/ui": "workspace:*",
     "@tanstack/react-router": "^1.105.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@resume/tailwind": "workspace:*",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/router-devtools": "^1.105.0",
     "@tanstack/router-plugin": "^1.105.0",
@@ -31,6 +35,7 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
     "vite": "^6.1.0",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.5"
   }
 }
