--- a/apps/resume-web/tsconfig.app.json
+++ b/apps/resume-web/tsconfig.app.json
@@ -20,7 +20,12 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    "paths": {
+      "@components/*": ["./src/shared/components/*"],
+    }
+
   },
   "include": ["src"]
 }
