--- a/apps/resume-web/tsconfig.app.json
+++ b/apps/resume-web/tsconfig.app.json
@@ -24,6 +24,7 @@
 
     "paths": {
       "@components/*": ["./src/shared/components/*"],
+      "@utils/*": ["./src/shared/utils/*"],
     }
 
   },
