--- a/apps/resume-web/tsconfig.app.json
+++ b/apps/resume-web/tsconfig.app.json
@@ -25,6 +25,9 @@
     "paths": {
       "@components/*": ["./src/shared/components/*"],
       "@utils/*": ["./src/shared/utils/*"],
+      "@services/*": ["./src/shared/services/*"],
+      "@providers/*": ["./src/shared/providers/*"],
+      "@signals/*": ["./src/shared/signals/*"],
     }
 
   },
