feat: add LabeledNativeSelect and NativeSelect components with stories

--- a/packages/resume-ui/package.json
+++ b/packages/resume-ui/package.json
@@ -22,6 +22,9 @@
     },
     "./sidebar/default-icon": {
       "import": "./src/sidebar/DefaultIcon.tsx"
+    },
+    "./native-select": {
+      "import": "./src/native-select/index.tsx"
     }
   },
   "scripts": {
