--- a/apps/resume-web/package.json
+++ b/apps/resume-web/package.json
@@ -14,6 +14,7 @@
     "@resume/icons": "workspace:*",
     "@resume/ui": "workspace:*",
     "@tanstack/react-router": "^1.105.0",
+    "docx": "^9.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -23,6 +24,7 @@
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/router-devtools": "^1.105.0",
     "@tanstack/router-plugin": "^1.105.0",
+    "@types/node": "^22.13.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react-swc": "^3.5.0",
