fix: update deployment path in GitHub Actions workflow

--- a/.github/workflows/deploy_gh_pages.yml
+++ b/.github/workflows/deploy_gh_pages.yml
@@ -59,7 +59,7 @@ jobs:
           - Trigger event: ${{ github.event_name }}
  
           Technical details:
-          - Storybook path: apps/docs
+          - App path: apps/resume-web
           - Node.js: v22
           - Package manager: pnpm@9.12.2"
           
